--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.8.0",
+    "aos": "^2.3.4",
     "firebase-admin": "^12.6.0",
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
